--- a/index.html
+++ b/index.html
@@ -2,51 +2,45 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
-	<title>jQuery</title>
+	<title>Calculatrice Simplon</title>
 </head>
 <body>
 	<h1>Bienvenue</h1>
-	<!--<form onsubmit="return false">
-		<input id="input1" type="text" placeholder="Nombre 1">
-		<input id="input2" type="text" placeholder="Nombre 2">
-		<select name="ope" id="ope">
-			<option value="add">+</option>
-			<option value="substract">-</option>
-			<option value="multiply">*</option>
-			<option value="divide">/</option>
-		</select>
-		<button id="button1">Calculer</button>
-	</form-->
-	<span id="aff">Opération</span>
-	<span id="result">Résultat</span>
+	<div>
+	</div>
 	<div class="container">
-		<div>
-			<button class="calculette" data-chiffre="1">1</button>
-			<button class="calculette" data-chiffre="2">2</button>
-			<button class="calculette" data-chiffre="3">3</button>
-			<button class="calculette" data-ope="+">+</button>
+		Résultat = <span>?</span>
+
+		<div class="row">
+			<button id="chiffre">1</button>
+			<button id="chiffre">2</button>
+			<button id="chiffre">3</button>
+			<button id="ope">+</button>
 		</div>
-		<div>
-			<button class="calculette" data-chiffre="4">4</button>
-			<button class="calculette" data-chiffre="5">5</button>
-			<button class="calculette" data-chiffre="6">6</button>
-			<button class="calculette" data-ope="-">-</button>
+
+		<div class="row">
+			<button id="chiffre">4</button>
+			<button id="chiffre">5</button>
+			<button id="chiffre">6</button>
+			<button id="ope">-</button>
 		</div>
-		<div>
-			<button class="calculette" data-chiffre="7">7</button>
-			<button class="calculette" data-chiffre="8">8</button>
-			<button class="calculette" data-chiffre="9">9</button>
-			<button class="calculette" data-ope="*">*</button>
+
+		<div class="row">
+			<button id="chiffre">7</button>
+			<button id="chiffre">8</button>
+			<button id="chiffre">9</button>
+			<button id="ope">*</button>
 		</div>
-		<div>
-			<button class="calculette" data-ope="/">/</button>
-			<button class="calculette" data-ope="=">=</button>
-			<button id="calc" data-calculer="calculer">Calculer</button>
+
+		<div class="row">
+			<button id="chiffre">0</button>
+			<button id="ope">/</button>
+			<button id="result">=</button>
 		</div>
 	</div>
 
-	<script src="node_modules/jquery/dist/jquery.js"></script>
-	<script src="app.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<script src="app.js"></script>
 </body>
 </html>
