--- a/Version2/index2.html
+++ b/Version2/index2.html
@@ -5,41 +5,42 @@
 	<title>Calculatrice Simplon</title>
 </head>
 <body>
-	<h1>Bienvenue</h1>
+	<h1>Calculatrice</h1>
 	<div>
 	</div>
 	<div class="container">
-		Résultat = <span>?</span>
+		<div><span id="ope"></span></div>
+		<div><input></div>
 
 		<div class="row">
-			<button id="chiffre">1</button>
-			<button id="chiffre">2</button>
-			<button id="chiffre">3</button>
-			<button id="ope">+</button>
+			<button id="1">1</button>
+			<button id="2">2</button>
+			<button id="3">3</button>
+			<button id="add">+</button>
 		</div>
 
 		<div class="row">
-			<button id="chiffre">4</button>
-			<button id="chiffre">5</button>
-			<button id="chiffre">6</button>
-			<button id="ope">-</button>
+			<button id="4">4</button>
+			<button id="5">5</button>
+			<button id="6">6</button>
+			<button id="sub">-</button>
 		</div>
 
 		<div class="row">
-			<button id="chiffre">7</button>
-			<button id="chiffre">8</button>
-			<button id="chiffre">9</button>
-			<button id="ope">*</button>
+			<button id="7">7</button>
+			<button id="8">8</button>
+			<button id="9">9</button>
+			<button id="mult">*</button>
 		</div>
 
 		<div class="row">
-			<button id="chiffre">0</button>
-			<button id="ope">/</button>
+			<button id="0">0</button>
+			<button id="div">/</button>
 			<button id="result">=</button>
 		</div>
 	</div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="app2.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="app2.js"></script>
 </body>
 </html>
