Ajout du style.css + modif du code html et js

--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 		<div><input></div>
 
 		<div class="row">
-			<button data-chiffre="1">1</button>
-			<button data-chiffre="2">2</button>
-			<button data-chiffre="3">3</button>
-			<button data-ope="+">+</button>
+			<button data-calc="1">1</button>
+			<button data-calc="2">2</button>
+			<button data-calc="3">3</button>
+			<button data-calc="+">+</button>
 		</div>
 
 		<div class="row">
-			<button data-chiffre="4">4</button>
-			<button data-chiffre="5">5</button>
-			<button data-chiffre="6">6</button>
-			<button data-ope="-">-</button>
+			<button data-clac="4">4</button>
+			<button data-calc="5">5</button>
+			<button data-calc="6">6</button>
+			<button data-calc="-">-</button>
 		</div>
 
 		<div class="row">
-			<button data-chiffre="7">7</button>
-			<button data-chiffre="8">8</button>
-			<button data-chiffre="9">9</button>
-			<button data-ope="*">*</button>
+			<button data-calc="7">7</button>
+			<button data-calc="8">8</button>
+			<button data-calc="9">9</button>
+			<button data-calc="*">*</button>
 		</div>
 
 		<div class="row">
-			<button data-chiffre="0">0</button>
-			<button data-ope="/">/</button>
+			<button data-calc="0">0</button>
+			<button data-calc="/">/</button>
 			<button id="result">=</button>
 			<button id="reset">Reset</button>
 		</div>
